# educationStuff

./: .gitignore  README.md  buildEducationStuffProject.sh
cppStuff/: CMakeLists.txt  copyCtorAndAssginmentOperatorExample.cpp  copyCtorAndAssginmentOperatorExample.h  copyCtorUsagesExample.cpp  defualtCtorExample.cpp  functionTemplateExample.cpp  functionTemplateExample.h  invokingVirtualFunctionFromCtor.cpp  nameHidingExample.cpp  nameHidingExample.h  objectComposition.cpp  objectCompositionAndAggragation.cpp  pointerToAmpersand.cpp  sharedFromThisUsage.cpp  structPointerExample.c  thisPointerLocationExample.cpp  vectorExample.cpp  vectorExplained.cpp  virtualTableExplained.cpp
cppStuff/codeSnippets/vectorEraseElement/: CMakeLists.txt  eraseElementFromVector.cpp
cppStuff/desginPatterns/: prog
cppStuff/generalCppIdioms/: CMakeLists.txt  classMembersCreationOrder.cpp  copyCtorAndAssginmentOperatorExample.cpp  copyCtorUsagesExample.cpp  defualtCtorExample.cpp  moveSemantics.cpp
cppStuff/generalCppIdioms/cpp11/: moveSemantics.cpp  stdThreadExamples.cpp  uniquePtrUsage.cpp
cppStuff/generalCppIdioms/exceptions/: CMakeLists.txt  main.cpp
cppStuff/generalCppIdioms/g++Bug/: baseClassWithPureVirtualFunctions.cpp  baseClassWithPureVirtualFunctions.h  derivedClassWithPureVirtualFunctions.cpp  derivedClassWithPureVirtualFunctions.h  main.cpp
cppStuff/moreEffectiveCppVer1/: CMakeLists.txt  buildProject.cmd  item1.cpp  item19.cpp  item20.cpp  item21.cpp  item3.cpp  item4.cpp  item8.cpp  item9.cpp
cppStuff/moreEffectiveCppVer1/item1/: CMakeLists.txt  buildProject.cmd
cppStuff/moreEffectiveCppVer1/item10/: item10.cpp
cppStuff/moreEffectiveCppVer1/item11/: item11.cpp
cppStuff/moreEffectiveCppVer1/item12/: item12.cpp
cppStuff/moreEffectiveCppVer1/item13/: item13.cpp
cppStuff/moreEffectiveCppVer1/item15/: notes.txt
cppStuff/moreEffectiveCppVer1/item16/: notes.txt
cppStuff/moreEffectiveCppVer1/item17/: CMakeLists.txt  item17.cpp
cppStuff/moreEffectiveCppVer1/item18/: CMakeLists.txt  item18.cpp
cppStuff/moreEffectiveCppVer1/item19/: CMakeLists.txt  item19.cpp
cppStuff/moreEffectiveCppVer1/item20/: CMakeLists.txt  item20.cpp
cppStuff/moreEffectiveCppVer1/item21/: CMakeLists.txt  item21.cpp
cppStuff/moreEffectiveCppVer1/item22/: CMakeLists.txt  item22.cpp
cppStuff/moreEffectiveCppVer1/item23/: CMakeLists.txt  item23.cpp
cppStuff/moreEffectiveCppVer1/item24/: CMakeLists.txt  item24.cpp
cppStuff/moreEffectiveCppVer1/item25/: CMakeLists.txt  item25.cpp
cppStuff/moreEffectiveCppVer1/item26/: CMakeLists.txt  item26.cpp
cppStuff/moreEffectiveCppVer1/item27/: CMakeLists.txt  item27.cpp
cppStuff/moreEffectiveCppVer1/item28/: CMakeLists.txt  MyBasicSmartPointer.cpp  MyBasicSmartPointer.h  MySimpleUniquePointer.cpp  MySimpleUniquePointer.h  item28.cpp
cppStuff/moreEffectiveCppVer1/item8/: CMakeLists.txt  item8.cpp
cppStuff/moreEffectiveCppVer1/item9/: item9.cpp
cppStuff/moreEffectiveCppVer3/: item3.cpp
cppStuff/stl/vector/: CMakeLists.txt  MyObj.cpp  MyObj.h  MyObjNoDefualtCtor.cpp  MyObjNoDefualtCtor.h  MyObjsOperators.cpp  MyObjsOperators.h  vector.cpp  vector1Exaplained.cpp  vector1Exaplained.h  vector2Exaplained.cpp  vector2Exaplained.h  vector3Exaplained.cpp  vector3Exaplained.h
interviewQuestions/common/: CMakeLists.txt  linkedList.c  linkedList.cpp  linkedList.h  node.cpp
interviewQuestions/generalQuestions/: CMakeLists.txt  buildGeneralQuestionsExes.sh  linkedListQuestions.cpp  linkedListQuestionsMain.cpp
interviewQuestions/generalQuestions/linkedList/: linkedListQuestionsMain.cpp
interviewQuestions/generalQuestions/stack/: myStack.h  stackMain.cpp
interviewQuestions/jobHuntQuestions/: CMakeLists.txt  linkedList.c  main.c  myMemcpy.c  prog  q1.c  q2.c  q30.h  q53.h  q7.h  q79.h
interviewQuestions/round5/checkpoint/: CMakeLists.txt  atoiQuestion.c  atoiQuestion.h  findDoubleOccurencesInString.h  findLoopInALinkedList.c  findLoopInALinkedList.h  findNthElementFromEndOfList.c  iotaQuestion.c  linkedList.c  node.c  reachEndOfTwoDimMatrix.c  reachEndOfTwoDimMatrix.h  removeWhiteSpacesFromStr.h
interviewQuestions/twistLock/: CMakeLists.txt
interviewQuestions/twistLock/documentation/: Setup and prerequesits.docx  python_questions
interviewQuestions/twistLock/src/: CMakeLists.txt
interviewQuestions/twistLock/tests/: sendSIGINTSignalToServerTest.py  singleGetStatsRequestTest.py  (+2 more)
learnC/: bigVsLittleEndian.c  (+4 more)
multiThreaded/posixThreads/: CMakeLists.txt
playGround/cSamples/: CMakeLists.txt  jobHuntQuestion51.h  jobHuntQuestion53.h  main.c  pointersSummary.h
playGround/common/: CMakeLists.txt
playGround/cppSamples/: CMakeLists.txt  main.cpp
playGround/processMemoryUsageWindows/: CMakeLists.txt  buildProject.cmd  proc1.cpp  proc2.cpp
playGround/staticLibraryTopic/: CMakeLists.txt  README.txt
prevJobs/spirentCode/: CMakeLists.txt  buildScriptForJenkinsJob.sh  buildSpirentCodeProject.sh
tasks/: CMakeLists.txt
tasks/bloom/: firstInterview.h  generalCppQuestions.h
tasks/bufferOverflowExample/: bufferOverflowQuestion.c
tasks/crackingTheCodingInterviewQuestions/: q18-3.cpp  q18-3.h  q18-5.cpp  q18-5.h
tasks/cyberreason/: questions.cpp
tasks/cynet/: main.cpp
tasks/cyren/: main.cpp  randomDigits.h  sortedArrayAndNumber.h
tasks/final/: CMakeLists.txt  main.cpp  q1.h  q2.h
tasks/imperva/: mainImperva.cpp  reverseString.h  stringQuestion.h  structQuestion.h
tasks/jobHuntQuestions/: linkedList.c  linkedList.h  main.c  node.h  q1.c  q43.h  q53.c  q53.h  q54.h
tasks/kayhut/: CMakeLists.txt
tasks/radware/: CMakeLists.txt  lruCache.cpp  lruCache.h  lruCacheNode.cpp  lruCacheNode.h  main.cpp  twoStringsQuestion.h
tasks/spirentCode/: CMakeLists.txt  README.md  adapterMgr.cpp  adapterMgr.h  cCollector.cpp  cCollector.h  cStatsCollectedBase.cpp  cStatsCollectedBase.h  cStatsCollectedCounter.cpp  cStatsCollectedCounter.h  coreMgr.cpp  lwm2mAdapter.cpp  main.cpp
tasks/velostrataCode/: CMakeLists.txt  sgFileSystem.h
toolChainAndCompilationProcessRelatedTopics/compilationProccess/: CMakeLists.txt  linuxNotes.txt  notes.txt
(+450 files in other folders)
