# ======================================================================================================================================
# general project settings
# ======================================================================================================================================
cmake_minimum_required(VERSION 3.10)

project(interviewQuestionsCommon)

message(STATUS "processing CMakeLists of project:${CMAKE_PROJECT_NAME} within folder:${CMAKE_CURRENT_LIST_DIR}")

# ======================================================================================================================================
# include directories
# ======================================================================================================================================
#include_directories("${CMAKE_CURRENT_LIST_DIR}/include")

# ======================================================================================================================================
# group all source files of the library
# ======================================================================================================================================
file(GLOB_RECURSE COMMON_SRC
    "${CMAKE_CURRENT_LIST_DIR}/*.cpp") 

file(GLOB_RECURSE COMMON_HEADERS
    "${CMAKE_CURRENT_LIST_DIR}/*.h")

# ======================================================================================================================================
# create the library
# ======================================================================================================================================
add_library(interviewQuestionsCommonLib SHARED ${COMMON_SRC} ${COMMON_HEADERS})

# ======================================================================================================================================
# link the library with all other needed libraries
# ======================================================================================================================================

